=== Safari-54 ===

2003-01-22  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

	- fixed 3137084 -- Many non-reproducible crashers in ContextImp::mark / ScopeChain::mark

        * kjs/scope_chain.cpp: (ScopeChain::push): Add assertion.
        (ScopeChain::release): Fix while loop so that it decrements refCount of the first node in
        the chain too.

2003-01-21  Darin Adler  <darin@apple.com>

        - correct our copyrights to 2003; copyright is based on year of publication, not year worked on

2003-01-16  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- made minor tweaks to work better with Mozilla's JavaScript tests.

        * kjs/testkjs.cpp:
        (VersionFunctionImp::call): Implemented 
        (main): Ignore files named -f (hack to match -f <filename syntax
	that moz JavaScript tests expect). Also use return code 3 instead
	of 1 for uncaught exception.

2003-01-16  Darin Adler  <darin@apple.com>

        * kjs/number_object.cpp: (NumberObjectImp::construct):
	Fix build, remove stray space.

2003-01-16  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

	- rolled in a change from the KJS folks

        * kjs/number_object.h: Use ObjectImp *, not Object, for the proto.
        * kjs/number_object.cpp:
        (NumberInstanceImp::NumberInstanceImp): Use ObjectImp *, not Object, for the proto.
        (NumberPrototypeImp::NumberPrototypeImp): Pass ObjectImp.
        (NumberObjectImp::construct): Use ObjectImp.

=== Safari-52 ===

2003-01-14  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

	- rolled in a change from the KJS folks

	Fixes a bug where the date functions would not accept non-strings.
	And provides a bit of a speedup.

        * kjs/date_object.h: Change parameter type for parseDate.
        * kjs/date_object.cpp:
        (DateObjectFuncImp::call): Always call toString, don't check the type.
        (KJS::parseDate): Take a UString parameter, not a String parameter.
